# rcBot

./: LICENSE  calculation.txt  outputLog_encoders.txt  outputLog_imuDeg.txt  outputLog_motorCmds.txt  outputLog_wheelDistance.txt
src/ocpkg/: CMakeLists.txt  package.xml  setup.py
src/ocpkg/config/: pid_gains.yaml  robot_params.yaml  teleop_params.yaml
src/ocpkg/launch/: macnum_control.launch.py
src/ocpkg/msg/: EncoderTicks.msg  MechanismState.msg  MotorCmds.msg  WheelDistances.msg
src/ocpkg/scripts/: encoder_calibration.py  imu_accuracy_diagnostic.py  mechanism_node.py  motor_voltage_diagnostic.py  natural_bias_test.py  pid_controller_node.py  ps5_teleop_node.py  signal_display_node.py  yaw_manager_node.py
